fix(ux): logo width on small screens

--- a/src/modules/Embassy/components/Header.module.scss
+++ b/src/modules/Embassy/components/Header.module.scss
@@ -34,7 +34,7 @@
   box-shadow: none;
 
   @include responsiveMaxWidth($bpTablet) {
-    width: 31px;
+    width: 104px;
     height: 52px;
   }
 
